--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_ANILIST_API_URL=https://graphql.anilist.co/
 VITE_JIKAN_API_URL=https://api.jikan.moe/v4/
 VITE_AU_API_URL=https://www.animeunity.so/
+VITE_KITSU_API_URL=https://kitsu.io/api/edge/
